# nn-template-core

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  pyproject.toml  setup.cfg
.github/workflows/: publish_pypi.yml
src/nn_core/: __init__.py  callbacks.py  console_logging.py  hooks.py  model_logging.py  resume.py  serialization.py  types.py  ui.py
src/nn_core/common/: __init__.py  utils.py
