[metadata]
name = nn-core
description = To be parametrized
long_description = file: README.md
author = xxx
author_email = yyy
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    hydra-core
    wandb

    # Stable stuff usually backward compatible
    python-dotenv
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
# Test dependencies
test =
    pytest
    pytest-cov

# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
