[metadata]
name = nn-template-core
description = Utility library for nn-template.
long_description = file: README.md
author = Valentino Maiorca
author_email = valentino@maiorca.xyz
keywords = python, torch
license = MIT License
url = https://github.com/Flegyas/nn-template-core

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    hydra-core
    wandb

    # Stable stuff usually backward compatible
    python-dotenv
    stqdm
    rich

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
# Test dependencies
test =
    pytest
    pytest-cov

# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
